<resources>
    <string name="app_name">云聊</string>
    <string name="action_search">搜索</string>
    <string name="action_plus">添加</string>
    <string name="action_setting">设置</string>
    <string name="login_name">请输入用户名</string>
    <string name="login_pass">请输入密码</string>
    <string name="login_remember">记住用户</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="tab_message">信息</string>
    <string name="tab_contacts">联系人</string>
    <string name="plus_one">加一</string>
    <string name="plus_two">加二</string>
    <string name="plus_three">加三</string>
</resources>
